tests/kyverno-policies/statefulset-gpfs-fileset/resources.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-local-ess
  namespace: webservice
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        labels:
          osc.edu/service-account: "test-user"
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-ess
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-without-service-account
  namespace: webservice
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-scratch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset-local-ess
  namespace: paas
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        labels:
          osc.edu/service-account: "test-user"
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-ess
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset-without-service-account
  namespace: paas
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-scratch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-with-nfs-storage
  namespace: webservice
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: webservices-nfs-client
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-without-fileset
  namespace: webservice
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        # annotations:
          # Missing osc.edu/fileset annotation
      spec:
        storageClassName: local-scratch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset-without-fileset
  namespace: paas
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        # annotations:
          # Missing osc.edu/fileset annotation
      spec:
        storageClassName: local-scratch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-with-invalid-fileset
  namespace: webservice
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        annotations:
          osc.edu/fileset: "invalid-fileset"
      spec:
        storageClassName: local-ess
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-with-valid-fileset
  namespace: webservice
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-ess
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset-with-valid-fileset
  namespace: paas
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-ess
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset-with-invalid-fileset
  namespace: paas
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        annotations:
          osc.edu/fileset: "invalid-fileset"
      spec:
        storageClassName: local-ess
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-local-ess-with-uid-gid
  namespace: webservice
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        labels:
          osc.edu/service-account: test-user
          osc.edu/service-account-uid: "1000"
          osc.edu/service-account-gid: "1001"
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-ess
    - metadata:
        name: nfs-statefulset-pvc
      spec:
        storageClassName: nfs
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-local-scratch-with-uid-gid
  namespace: webservice
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        labels:
          osc.edu/service-account: test-user
          osc.edu/service-account-uid: "1000"
          osc.edu/service-account-gid: "1001"
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-scratch
    - metadata:
        name: nfs-statefulset-pvc
      spec:
        storageClassName: nfs
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-local-ess-with-wrong-uid-gid
  namespace: webservice
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        labels:
          osc.edu/service-account: test-user
          osc.edu/service-account-uid: "999"
          osc.edu/service-account-gid: "999"
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-ess
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-local-scratch-with-wrong-service-account
  namespace: webservice
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        labels:
          osc.edu/service-account: foo
          osc.edu/service-account-uid: "1000"
          osc.edu/service-account-gid: "1001"
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-scratch
---
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-local-scratch-with-wrong-uid-gid
  namespace: webservice
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        labels:
          osc.edu/service-account: test-user
          osc.edu/service-account-uid: "999"
          osc.edu/service-account-gid: "999"
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-scratch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-local-ess-without-uid-gid
  namespace: webservice
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-ess
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-local-scratch-without-uid-gid
  namespace: webservice
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-scratch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset-local-ess-with-uid-gid
  namespace: paas
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        labels:
          osc.edu/service-account: test-user
          osc.edu/service-account-uid: "1000"
          osc.edu/service-account-gid: "1001"
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-ess
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset-local-scratch-with-uid-gid
  namespace: paas
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        labels:
          osc.edu/service-account: test-user
          osc.edu/service-account-uid: "1000"
          osc.edu/service-account-gid: "1001"
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-scratch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset-local-ess-with-wrong-service-account
  namespace: paas
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        labels:
          osc.edu/service-account: foo
          osc.edu/service-account-uid: "1000"
          osc.edu/service-account-gid: "1001"
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-ess
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset-local-ess-with-wrong-uid-gid
  namespace: paas
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        labels:
          osc.edu/service-account: test-user
          osc.edu/service-account-uid: "999"
          osc.edu/service-account-gid: "999"
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-ess
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset-local-scratch-with-wrong-uid-gid
  namespace: paas
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        labels:
          osc.edu/service-account: test-user
          osc.edu/service-account-uid: "999"
          osc.edu/service-account-gid: "999"
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-scratch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset-local-ess-without-service-account
  namespace: paas
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        labels:
          osc.edu/service-account-uid: "1000"
          osc.edu/service-account-gid: "1001"
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-ess
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset-local-ess-without-uid-gid
  namespace: paas
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        labels:
          osc.edu/service-account: test-user
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-ess
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset-local-scratch-without-uid-gid
  namespace: paas
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        labels:
          osc.edu/service-account: test-user
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-scratch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset-with-nfs-storage
  namespace: paas
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: paas-nfs-client
