tests/kyverno-policies/statefulset-gpfs-fileset/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: statefulset-gpfs-fileset
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: statefulset-gpfs-fileset
    rule: validate-service-account
    resources:
      - webservice-statefulset-local-ess
      - paas-statefulset-local-ess
    kind: StatefulSet
    result: pass
  - policy: statefulset-gpfs-fileset
    rule: validate-service-account
    resources:
      - webservice-statefulset-without-service-account
      - paas-statefulset-without-service-account
    kind: StatefulSet
    result: fail
  - policy: statefulset-gpfs-fileset
    rule: validate-service-account
    resources:
      - webservice-statefulset-with-nfs-storage
    kind: StatefulSet
    result: skip
  - policy: statefulset-gpfs-fileset
    rule: statefulset-validate-fileset-set
    resources:
      - webservice-statefulset-local-ess
      - paas-statefulset-local-ess
    kind: StatefulSet
    result: pass
  - policy: statefulset-gpfs-fileset
    rule: statefulset-validate-fileset-set
    resources:
      - webservice-statefulset-without-fileset
      - webservice-statefulset-with-pde-fileset
      - paas-statefulset-without-fileset
    kind: StatefulSet
    result: fail
  - policy: statefulset-gpfs-fileset
    rule: statefulset-validate-fileset-set
    resources:
      - webservice-statefulset-with-nfs-storage
    kind: StatefulSet
    result: skip
  - policy: statefulset-gpfs-fileset
    rule: statefulset-disallow-pde-fileset-permissions
    resources:
      - webservice-statefulset-with-pde-fileset
    kind: StatefulSet
    result: pass
  - policy: statefulset-gpfs-fileset
    rule: statefulset-disallow-pde-fileset-permissions
    resources:
      - webservice-statefulset-with-pde-fileset-permissions
    kind: StatefulSet
    result: fail
  - policy: statefulset-gpfs-fileset
    rule: statefulset-disallow-pde-fileset-permissions
    resources:
      - webservice-statefulset-with-nfs-storage
      - webservice-statefulset-local-ess
      - webservice-statefulset-without-fileset
      - paas-statefulset-local-ess
      - paas-statefulset-without-fileset
    kind: StatefulSet
    result: skip
  - policy: statefulset-gpfs-fileset
    rule: validate-webservice-fileset-annotation
    resources:
      - webservice-statefulset-with-valid-fileset
    kind: StatefulSet
    result: pass
  - policy: statefulset-gpfs-fileset
    rule: validate-webservice-fileset-annotation
    resources:
      - webservice-statefulset-with-invalid-fileset
    kind: StatefulSet
    result: fail
  - policy: statefulset-gpfs-fileset
    rule: validate-webservice-fileset-annotation
    resources:
      - paas-statefulset-local-ess
      - paas-statefulset-without-fileset
    kind: StatefulSet
    result: skip
  - policy: statefulset-gpfs-fileset
    rule: validate-paas-fileset-annotation
    resources:
      - paas-statefulset-with-valid-fileset
    kind: StatefulSet
    result: pass
  - policy: statefulset-gpfs-fileset
    rule: validate-paas-fileset-annotation
    resources:
      - paas-statefulset-with-invalid-fileset
    kind: StatefulSet
    result: fail
  - policy: statefulset-gpfs-fileset
    rule: validate-paas-fileset-annotation
    resources:
      - paas-statefulset-without-fileset
      - webservice-statefulset-without-service-account
      - webservice-statefulset-without-fileset
      - webservice-statefulset-with-invalid-fileset
    kind: StatefulSet
    result: skip
  - policy: statefulset-gpfs-fileset
    rule: validate-service-account-uid-gid-webservice
    resources:
      - webservice-statefulset-local-ess-with-uid-gid
      - webservice-statefulset-local-scratch-with-uid-gid
    kind: StatefulSet
    result: pass
  - policy: statefulset-gpfs-fileset
    rule: validate-service-account-uid-gid-webservice
    resources:
      - webservice-statefulset-local-scratch-with-wrong-service-account
      - webservice-statefulset-local-ess-with-wrong-uid-gid
      - webservice-statefulset-local-scratch-with-wrong-uid-gid
      - webservice-statefulset-local-ess-without-uid-gid
      - webservice-statefulset-local-scratch-without-uid-gid
    kind: StatefulSet
    result: fail
  - policy: statefulset-gpfs-fileset
    rule: validate-service-account-uid-gid-webservice
    resources:
      - webservice-statefulset-with-nfs-storage
      - paas-statefulset-without-fileset
    kind: StatefulSet
    result: skip
  - policy: statefulset-gpfs-fileset
    rule: validate-service-account-uid-gid-paas
    resources:
      - paas-statefulset-local-ess-with-uid-gid
      - paas-statefulset-local-scratch-with-uid-gid
    kind: StatefulSet
    result: pass
  - policy: statefulset-gpfs-fileset
    rule: validate-service-account-uid-gid-paas
    resources:
      - paas-statefulset-local-ess-with-wrong-service-account
      - paas-statefulset-local-ess-without-service-account
      - paas-statefulset-local-ess-with-wrong-uid-gid
      - paas-statefulset-local-scratch-with-wrong-uid-gid
      - paas-statefulset-local-ess-without-uid-gid
      - paas-statefulset-local-scratch-without-uid-gid
    kind: StatefulSet
    result: fail
  - policy: statefulset-gpfs-fileset
    rule: validate-service-account-uid-gid-paas
    resources:
      - paas-statefulset-with-nfs-storage
      - webservice-statefulset-without-fileset
    kind: StatefulSet
    result: skip
